# ttLib

./: .clang-format  .gitignore  .srcfiles.yaml  BUILD.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  issue_template.md  makefile  ttLibwx.natvis  ttlibwin.natvis  ttwx.natvis
.github/: issue_template.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  reviewcode_report.md  reviewdesign_report.md
.github/workflows/: cmake.yml  codeql-analysis.yml  msvc-analysis.yml  test_clang_format.yml
WTL/: README.md  ReadMe.html  atlapp.h  atlctrls.h  atlctrlw.h  atlctrlx.h  atldlgs.h  atldwm.h  atlfind.h  atlframe.h  atlgdi.h  atlmisc.h  atlprint.h  atlribbon.h  atlscrl.h  atlsplit.h  atltheme.h  ttwtlmsgs.h
WTL/DockingWindows/: DDTracker.h  DWAutoHide.h  DockImpl.cpp  DockMisc.h  DockingBox.h  DockingWindow.h  ExtDockingWindow.h  PackageWindow.h  README.md  SimpleSplitterBar.h  TabDockingBox.h  WndFrmPkg.h  sstate.h  stg.h  stgreg.h  stgxml.h
WTL/TabbingFramework/: CustomTabCtrl.h  DotNetTabCtrl.h  DynamicDialogTemplate.h  PlainTextView.h  README.md  SimpleDlgTabCtrls.h  SimpleTabCtrls.h  TabbedDockingWindow.h  TabbedFrame.h  TabbedMDI.h  TabbedMDISave.cpp  TabbedMDISave.h  atlgdix.h
WTL/include/: atlapp.h  atlctrls.h  atlctrlw.h  atlctrlx.h  atldlgs.h  atldwm.h  atlfind.h  atlframe.h  atlgdi.h  atlmisc.h  atlprint.h  atlribbon.h  atlscrl.h  atlsplit.h  atltheme.h  ttwtlmsgs.h
archive/: ttassert.cpp
docs/: Cmdline.md  strings.md
include/: Cmdline.h  asserts.h  basethread.h  creg.h  critsection.h  cstr.h  cttdlg.h  cwstr.h  enumstr.h  filedlg.h  findfile.h  hashpair.h  keyfile.h  keyviewmsgs.h  keyxml.h  keyxml_defs.h  kstr.h  ktime.h  multibtn.h  multithread.h  shadebtn.h  strlist.h  ttTR.h  ttarray.h  ttassert.h  ttatldlg.h  ttbasethread.h  ttcasemap.h  ttcmap.h  ttcmdline.h  ttconsole.h  ttcritsection.h  ttcstr.h  ttcvector.h  ttcview.h  ttcwd.h  ttdebug.h  ttdib.h  ttdirdlg.h  ttdlg.h  (+47 more)
src/: .srcfiles  .srcfiles.win.yaml  .srcfiles.yaml  basethread.cpp  codeowners  cstr.cpp  cwstr.cpp  enumstr.cpp  filedir.cpp  filedlg.cpp  hashpair.cpp  keyfile.cpp  keyxml.cpp  kstr.cpp  makefile  misc.cpp  multibtn.cpp  multithread.cpp  pch.cpp  pch.h  precomp.cpp  precomp.h  shadebtn.cpp  strfuncs.cpp  strlist.cpp  temp.cpp  ttTR.cpp  ttbasethread.cpp  ttconsole.cpp  ttcstr.cpp  ttcvector.cpp  ttcview.cpp  ttdebug.cpp  ttdib.cpp  ttdirdlg.cpp  ttdlg.cpp  ttenumstr.cpp  ttfile.cpp  ttfiledir.cpp  ttfiledlg.cpp  (+30 more)
src/bld/: .ninja_deps  .ninja_log  clangBuild32.ninja  clangBuild32D.ninja  clangBuild64.ninja  clangBuild64D.ninja  clang_dbg.ninja  clang_rel.ninja  msvcBuild32.ninja  msvcBuild32D.ninja  msvcBuild64.ninja  msvcBuild64D.ninja  msvc_dbg.ninja  msvc_rel.ninja
src/precompile/: pch.h  pch_wx.h
src/win32/: .srcfiles.yaml
src/winsrc/: ttbasethread.cpp  ttdebug.cpp  ttdebug_min.cpp  ttdib.cpp  ttdirdlg.cpp  ttdlg.cpp  ttfile.cpp  ttfiledir.cpp  ttfiledlg.cpp  tthashpair.cpp  ttheap.cpp  ttlinefile.cpp  ttlist.cpp  ttloadstr.cpp  ttmisc.cpp  ttmultibtn.cpp  ttmultithread.cpp  ttopenfile.cpp  ttprintf.cpp  ttregistry.cpp  ttshadebtn.cpp  ttstr.cpp  ttstrfuncs.cpp  ttthrdpool.cpp  ttutilw.cpp  ttwin.cpp  ttwindlg.cpp  ttwinmisc.cpp  ttwinspace.cpp  ttwstr.cpp  ttxml.cpp
src/winsrc/precompile/: pch.h
src/wxsrc/: .srcfiles.yaml  README.md  ttextra.cpp  ttstr.cpp
src/wxsrc/precomp/: pch.h
src/wxsrc/precompile/: pch.h
src/wxwin32/: .srcfiles.yaml
static/: .srcfiles.yaml  makefile
static/bld/: clangBuild32.ninja  clangBuild32D.ninja  clangBuild64.ninja  clangBuild64D.ninja  msvcBuild32.ninja  msvcBuild32D.ninja  msvcBuild64.ninja  msvcBuild64D.ninja
ttLibMD/: .srcfiles  makefile
ttTrace/: .srcfiles  .srcfiles.yaml  aboutdlg.h  funcs.h  init.cpp  mainapp.cpp  mainfrm.cpp  mainfrm.h  makefile  pch.h  prefs.cpp  prefs.h  resource.h  strtable.h  strtable.rc2  trace.rc  traceview.cpp  traceview.h
ttwx/: .srcfiles.yaml  makefile  ttTR.cpp  ttTR.h  ttassert.cpp  ttassert.h  ttcwd.h
utf8/: checked.h  core.h  unchecked.h
winsrc/: .srcfiles.yaml  makefile  ttbasethread.cpp  ttdebug.cpp  ttdib.cpp  ttdirdlg.cpp  ttdlg.cpp  ttfile.cpp  ttfiledir.cpp  ttfiledlg.cpp  tthashpair.cpp  ttheap.cpp  ttlinefile.cpp  ttlist.cpp  ttmisc.cpp  ttmultibtn.cpp  ttmultithread.cpp  ttprintf.cpp  ttshadebtn.cpp  ttstr.cpp  ttstrfuncs.cpp  ttutilw.cpp  ttwin.cpp  ttwindlg.cpp  ttwinmisc.cpp  ttwinspace.cpp  ttwstr.cpp  ttxml.cpp
winsrc/precompile/: pch.h
wxsrc/: .srcfiles.yaml  makefile  ttTR.cpp
wxsrc/precompile/: pch.h
